[project]
name = "trie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "pydantic>=2.11.3",
    "pydantic-settings>=2.2.1",
    "loguru>=0.7.2",
    "pymupdf>=1.26.4",
    "pyahocorasick>=2.1.0",
    "rapidfuzz>=3.13.0",
    "rich>=13.7.0",
]

[dependency-groups]
dev = [
    "ruff>=0.1.8",
    "ipykernel>=6.28.0",
    "jupyter>=1.0.0",
    "stackprinter>=0.2.11",
    "ipython>=8.26.0",
    "seaborn>=0.13.2",
]

test = [
    "pre-commit>=3.4.0",
    "pytest>=7.4.3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "ASYNC",
    "S",
    "BLE",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "DJ",
    "EM",
    "EXE",
    "FA",
    "ISC",
    "ICN",
    "LOG",
    "PIE",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TCH",
    "INT",
    "ERA",
    "PGH",
]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".hg", ".mypy_cache", ".nox", ".pants.d", ".pytype", ".ruff_cache", ".svn",
    ".tox", ".venv", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "venv",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.codespell]
skip = "*.pdf,*.ipynb,*.drawio,*.json"
ignore-words-list = ["instanciate"]

[tool.typos.default.extend-identifiers]
arange = "arange"

[tool.typos.default.extend-words]
Ue = "Ue"
Hashi = "Hashi"